# FutureFlightRace

./: README.md  readme.md
sh_utils/: pub_qr_pose.sh  real_flight.sh  record.sh  sim_traj_follow.sh
src/ctrl_node/: CMakeLists.txt
src/ctrl_node/config/: ctrl_param.yaml
src/ctrl_node/include/: controller.hpp  fsm_nodelet.hpp  input.hpp  param.hpp
src/ctrl_node/src/: controller.cpp  fsm_nodelet.cpp  input.cpp  param.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/config/: QrDetect_param.yaml  planning_param.yaml
src/planning/include/: QrDetect.hpp  planner.hpp
src/planning/launch/: qr.launch  route_follow.launch
src/planning/src/: QrDetect.cpp  planner.cpp  qrDetect.cpp
src/quadrotor_msgs/msg/: Px4ctrlDebug.msg
third_part/apriltag/example/: opencv_demo.cc
